--- a/css/global.scss
+++ b/css/global.scss
@@ -5,3 +5,15 @@ html, body, #container, .container, .window {
 #container {
 	margin-top: 70px;
 }
+
+.halves {
+	height: 50%;
+}
+
+.thirds {
+	height: 33%;
+}
+
+.quarters {
+	height: 25%;
+}
