--- a/_shared/navbar.jade
+++ b/_shared/navbar.jade
@@ -1,18 +1,19 @@
 nav.navbar.navbar-inverse.navbar-fixed-top(role="navigation")
-	.container
-		.navbar-header
-			.navbar-toggle(type="button" data-toggle="collapse" data-target="#navigation")
-				span.sr-only Toggle navigation
-				span.icon-bar
-				span.icon-bar
-				span.icon-bar
-			.navbar-brand(href="#") Frontdesk
-		#navigation.collapse.navbar-collapse
-			ul.nav.navbar-nav.navbar-right
-				li.dropdown
-					a.dropdown-toggle(href="#" data-toggle="dropdown")
-						span.glyphicon.glyphicon-user
-							b.caret
-					ul.dropdown-menu
-						li
-							a#link-sign-out(href="#") Sign Out
+  .container
+    .navbar-header
+      .navbar-toggle(type="button" data-toggle="collapse" data-target="#navigation")
+        span.sr-only Toggle navigation
+        span.icon-bar
+        span.icon-bar
+        span.icon-bar
+      .navbar-brand(href="#") Frontdesk
+    #navigation.collapse.navbar-collapse
+      ul.nav.navbar-nav.navbar-right
+        li.dropdown
+          a.dropdown-toggle(href="#" data-toggle="dropdown")
+            span.glyphicon.glyphicon-user
+            |  Bryan Gilmer 
+            b.caret
+          ul.dropdown-menu
+            li
+              a#link-sign-out(href="#") Sign Out
